Prevent background color from bleeding to right margin

--- a/modules/css/gateway.css
+++ b/modules/css/gateway.css
@@ -123,6 +123,10 @@ textarea {
 	padding: 3px;
 }
 
+#greenBackground {
+	display: inline-block;
+}
+
 #greenBackground,
 div.donor {
     padding:16px 24px;
